# iot-lab-gateway

./: #fabfile.py#  .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  DEVELOPER.md  DOCKER.md  Docker-build.sh  Docker-run.sh  Dockerfile  FlashFirwmare.py  INSTALL.md  MANIFEST.in  Makefile  README  README.md  README_NEWNODE.md  build.sh  codecov.yml  config.py  control_node_interaction.py  docker-build  docker-gateway-rest-server  docker-run  envoi.py  fabfile.py  flash_firmware  flash_firmware.py  flash_firwmare.py  gateway-server-daemon  gateway_loggin.py  generate_dot_archi.py  install.sh  integration_script.sh  iot-lab-ftdi.rules  post_install.py  pylint.rc  pyproject.toml  (+7 more)
control_node_interface/: .gitignore  Makefile  command_reader.c  constants.h  main.c  protocol.h  serial.h  test_commands  test_on_gwt.sh  valid_commands
control_node_serial/: .gitignore  Makefile  OML.md  README.md  UNIT_TEST.md  control_node_serial.dot  invalid_commands  run_test_on_gwt.sh  test_commands  test_on_gwt.sh
curl_scripts/: profile.json
doc/: Makefile  README_INTEGRATION.md  README_INTEGRATION.tex  conf.py  gateway_code.autotest.rst  gateway_code.control_node.rst  gateway_code.open_nodes.rst  gateway_code.rst  gateway_code.utils.cli.rst  gateway_code.utils.rst  index.rst  modules.rst  node_example.py
gateway_code/: __init__.py  board_config.py  cn_serial_io.py  common.py  common_functions.py  config.py  control_node_interface.py  dispatch.py  envoi.py  expect.py  flash_firmware.py  gateway_logging.py  gateway_manager.py  gateway_roomba.py  gateway_validation.py  measures_handler.py  nodes.py  open_a8_interface.py  open_a8_node_connection.py  open_node.py  open_node_auto_test_interface.py  open_node_validation_interface.py  openocd_cmd.py  profile.py  protocol.py  protocol_cn.py  reset.py  rest_server.py  roomba.py  serial_redirection.py  server_rest.py
oml_swig/: README  oml.i  oml_test.py
roomba/: __init__.py  roomba.py
scripts_tests/: .gitignore  install_pylint_with_brain.sh  integration_tests_script.sh  ssh_config
static/: a8_autotest.elf  control_node.elf  control_node_idle_dc.elf  default_profile.json  (+3 more)
(+528 files in other folders)
